<resources>
    <string name="app_name">Guitar Tuner</string>
    <string name="start_tuning">Start Tuning</string>
    <string name="stop_tuning">Stop Tuning</string>
    <string name="settings">Settings</string>
    <string name="calibration">Calibration</string>
    <string name="reference_frequency">Reference Frequency</string>
    <string name="reference_frequency_hint">440 Hz</string>
      <string name="sensitivity">Sensitivity</string>
      <string name="display_delay">Display Delay</string>
       <string name="pitch_update_delay">Pitch Update Delay</string>
       <string name="in_tune_threshold">In-tune Threshold</string>
       <string name="in_tune_threshold_hint">cents</string>
       <string name="close">Close</string>
    <string name="permission_rationale">This app needs microphone access to detect guitar pitch</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="no_audio_permission">Microphone permission required</string>
    <string name="sharp">♯</string>
    <string name="flat">♭</string>
    <string name="in_tune">In Tune</string>
    <string name="sharp_indicator">Sharp</string>
    <string name="flat_indicator">Flat</string>
</resources>